--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -5,6 +5,8 @@
     .social-block__list {
       opacity: 1;
       pointer-events: auto;
+
+      @include social-list-items-hover;
     }
   }
 }
@@ -65,6 +67,8 @@
     & + .social-block__list {
       opacity: 1;
       pointer-events: auto;
+
+      @include social-list-items-hover;
     }
   }
 
@@ -145,6 +149,8 @@
   li {
     flex: none;
     margin-bottom: 0.5rem;
+    opacity: 0;
+    transform: translateY(10px);
 
     @media (min-width: $stop-scaling) {
       margin-bottom: 5px;
