--- a/source/scss/general/mixins.scss
+++ b/source/scss/general/mixins.scss
@@ -58,3 +58,17 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+@mixin social-list-items-hover {
+  li {
+    opacity: 1;
+    transform: translateY(0);
+
+    &:nth-child(2) {
+      transition-delay: 0.2s;
+    }
+    &:nth-child(3) {
+      transition-delay: 0.3s;
+    }
+  }
+}
