--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -1,6 +1,7 @@
 .form {
   position: relative;
   display: flex;
+  justify-content: flex-end;
   align-items: center;
 }
 
@@ -43,6 +44,7 @@
   border: 0;
   border-radius: 3rem;
   outline: none;
+  animation: slideLeft 1s ease backwards;
 
   &:focus {
     border: 1px solid $c-purple;
@@ -79,8 +81,6 @@
 }
 
 .form__button {
-  flex-grow: 1;
-
   @media (orientation: portrait) {
     position: relative;
     flex: none;
