--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -245,12 +245,11 @@
     &::after {
       content: "";
       position: absolute;
+      right: 0;
       bottom: 0;
-      width: 100%;
+      width: 0;
       height: 2px;
       background-color: $c-light;
-      display: none;
-      left: 0;
 
       @media (max-width: $tablet) and (orientation: portrait) {
         left: 0;
@@ -268,6 +267,7 @@
     &.active {
       &::after {
         display: block;
+        width: 100%;
       }
     }
 
@@ -277,7 +277,9 @@
       outline: none;
 
       &::after {
-        opacity: 1;
+        right: auto;
+        left: 0;
+        width: 100%;
         background-color: $c-purple;
       }
     }
