--- a/source/scss/animation.scss
+++ b/source/scss/animation.scss
@@ -27,7 +27,7 @@
 }
 
 .intro__message {
-  animation: fadeIn .4s ease .5s backwards;
+  animation: fadeInBottom .4s ease .5s backwards;
 }
 
 .slider {
@@ -40,5 +40,11 @@
         transition: opacity .7s ease .5s, transform .7s ease .5s;
       }
     }
+  }
+}
+
+.form {
+  &__field {
+    animation: maxWidth 1s ease backwards;
   }
 }
