--- a/source/scss/general/keyframes.scss
+++ b/source/scss/general/keyframes.scss
@@ -10,6 +10,18 @@
   }
 }
 
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 @keyframes maxWidth {
   from {
     max-width: 0;
@@ -17,5 +29,19 @@
 
   to {
     max-width: 100%;
+  }
+}
+
+@keyframes socialBlockToggler {
+  from {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  to {
+    opacity: 1;
+    width: 100%;
+    height: 100%;
   }
 }
