--- a/source/scss/animation.scss
+++ b/source/scss/animation.scss
@@ -25,8 +25,11 @@
     transition: color .4s ease, outline .4s ease;
 
     &::before {
-      animation: socialBlockToggler .5s cubic-bezier(.25,.15,.36,1.3) 1s backwards;
       transition: width .4s ease, height .4s ease, border-color .4s ease;
+
+      .page--loaded & {
+        animation: socialBlockToggler .5s cubic-bezier(.25,.15,.36,1.3) 1s backwards;
+      }
     }
   }
 
