--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -17,6 +17,23 @@
   @media (max-width: $tablet - 1) and (orientation: landscape) {
     height: 100vh;
   }
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 0;
+    background-color: $c-dark;
+  }
+}
+
+.screen--filling {
+  &::after {
+    height: 100%;
+  }
 }
 
 .screen__wrapper {
