--- a/source/scss/general/variables.scss
+++ b/source/scss/general/variables.scss
@@ -21,3 +21,4 @@ $retina-dppx: 1.5dppx;
 $index: 1.38871;
 
 $customTimeFunc: cubic-bezier(.32,1.08,.52,.91);
+$customTimeFuncOver: cubic-bezier(0.515, 0.190, 0.090, 1.325);
