--- a/source/scss/general/keyframes.scss
+++ b/source/scss/general/keyframes.scss
@@ -1,3 +1,13 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 @keyframes fadeInBottom {
   from {
     opacity: 0;
