--- a/source/scss/animation.scss
+++ b/source/scss/animation.scss
@@ -36,7 +36,7 @@
       transition: width .4s ease, height .4s ease, border-color .4s ease;
 
       .page--loaded & {
-        animation: socialBlockToggler .5s cubic-bezier(.25,.15,.36,1.3) 1s backwards;
+        animation: socialBlockToggler .5s cubic-bezier(.25, .15, .36, 1.3) 1s backwards;
       }
     }
   }
@@ -70,6 +70,7 @@
       .swiper-slide-active.swiper-slide-visible & {
         transition: opacity .7s ease .3s, transform .7s ease .3s;
       }
+
       .swiper-slide-next.swiper-slide-visible & {
         transition: opacity .7s ease .5s, transform .7s ease .5s;
       }
@@ -152,5 +153,28 @@
     &::before {
       transition-delay: 1s;
     }
+  }
+}
+
+.result__image {
+  &--leaf-left {
+    animation: resultImageLeafLeft 3s ease-out backwards .3s;
+  }
+
+  &--leaf-right {
+    animation: resultImageLeafRight 3s ease-out backwards .3s;
+  }
+
+  &--leaf-green {
+    animation: resultImageLeafGreen 3s ease-out backwards .3s;
+  }
+
+  &--suitcase {
+    animation: resultImageSuitcase .3s ease-out backwards;
+  }
+
+  &--flamingo {
+    animation: resultImageFlamingoShow .3s ease-out backwards, resultImageFlamingoFly 1.4s infinite alternate ease-in-out .3s;
+    transform-origin: 38% 68%;
   }
 }
