--- a/source/scss/blocks/result.scss
+++ b/source/scss/blocks/result.scss
@@ -87,6 +87,10 @@
     height: 100%;
     stroke-width: 0.2rem;
     stroke-linejoin: round;
+
+    stroke-dasharray: 790;
+    stroke-dashoffset: 790;
+    animation: dash 5s linear alternate;
   }
 }
 
