--- a/source/scss/blocks/animation-screen.scss
+++ b/source/scss/blocks/animation-screen.scss
@@ -5,13 +5,13 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background-image: url("../img/scene.png");
+  // background-image: url("../img/scene.png");
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center;
 
   @include retina {
-    background-image: url("../img/scene@2x.png");
+    // background-image: url("../img/scene@2x.png");
   }
 
   @media (orientation: portrait) {
@@ -21,4 +21,9 @@
       background-image: url("../img/scene-mob@2x.png");
     }
   }
+}
+
+#animation-screen {
+  width: 100%;
+  height: 100%;
 }
