--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -311,8 +311,8 @@
 }
 
 .screen--story {
-  background-color: $c-dark;
-  background-image: url("../img/slide1.jpg"), url("../img/slide2.jpg"), url("../img/slide3.jpg"), url("../img/slide4.jpg");
+  background-color: transparent; // $c-dark;
+  background-image: none !important; // url("../img/slide1.jpg"), url("../img/slide2.jpg"), url("../img/slide3.jpg"), url("../img/slide4.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
